deploy: 8214ac22d5cb241396dc372335f9f8428e5b78ed

--- a/components/Code.html
+++ b/components/Code.html
@@ -531,7 +531,7 @@ See <a href="https://shiki.style/themes">https://shiki.style/themes</a></p>
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>Specifies the source URL for the code.
-If <code>code</code> is provided, this will be ignored.</p>
+If <code>code</code> is provided, <code>src</code> will be ignored.</p>
 </div>
                 </td>
             </tr>
