--- a/components/Markdown.html
+++ b/components/Markdown.html
@@ -511,7 +511,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>Specifies the source URL for the code.
-If <code>code</code> is provided, this will be ignored.</p>
+If <code>code</code> is provided, <code>src</code> will be ignored.</p>
 </div>
                 </td>
             </tr>
