--- a/apps/docs/src/styles.css
+++ b/apps/docs/src/styles.css
@@ -4,6 +4,7 @@ html, body {
 
 /* pico variables changes */
 :root {
+  --pico-font-family-sans-serif: "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
   /*--pico-font-size: 95%;*/
 
   /* spacing */
