--- a/apps/docs/src/styles.css
+++ b/apps/docs/src/styles.css
@@ -1,10 +1,7 @@
-html, body {
-  height: 100vh;
-}
-
 /* pico variables changes */
 :root {
   --pico-font-family-sans-serif: "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
+  --xpd-body-height: auto;
   /*--pico-font-size: 95%;*/
 
   /* spacing */
@@ -20,106 +17,119 @@ html, body {
   /*--pico-nav-link-spacing-horizontal: 0.45rem;*/
 }
 
-/* fix pico */
-
-dialog > article > header .close, dialog > article > header :is(a,button)[rel=prev] {
-  /* fix the position of the close button */
-  transform: translateY(5px);
+html, body {
+  height: var(--xpd-body-height);
 }
 
-/* pico overrides */
-
-button.toolbar {
-  /* small button with icon */
-  padding: 0;
-}
+.pico {
 
 
-/* space utils */
+  /* fix pico */
 
-.hvh {
-  height: 100vh;
-}
+  dialog > article > header .close, dialog > article > header :is(a,button)[rel=prev] {
+    /* fix the position of the close button */
+    transform: translateY(5px);
+  }
 
-.wvw {
-  width: 100vw;
-}
+  /* pico overrides */
 
-.fh {
-  height: 100%;
-}
-
-.fw {
-  width: 100%;
-}
-
-.m-10 {
-  margin: 1rem;
-}
-
-.px-10 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-10 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
+  button.toolbar {
+    /* small button with icon */
+    padding: 0;
+  }
 
 
-/* flex utils */
-.col, .row {
-  display: flex;
-}
+  /* space utils */
 
-.col {
-  flex-direction: column;
-}
+  .hvh {
+    height: 100vh;
+  }
 
-.row {
-  flex-direction: row;
-  align-items: flex-start;
-}
+  .wvw {
+    width: 100vw;
+  }
 
-.grow {
-  flex: 1;
-}
+  .fh {
+    height: 100%;
+  }
 
-.centered {
-  align-items: center;
-  justify-content: center;
-}
+  .fw {
+    width: 100%;
+  }
 
-.wrap {
-  flex-wrap: wrap;
-}
+  .m-10 {
+    margin: 1rem;
+  }
 
-.g-10 {
-  gap: 1rem;
-}
+  .p-10 {
+    padding: 1rem;
+  }
+
+  .px-10 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .py-10 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 
 
-/* documentation blocks */
+  /* flex utils */
 
-xpr-code pre {
-  padding: 1em;
-}
+  .col, .row {
+    display: flex;
+  }
 
-/* symbols */
+  .col {
+    flex-direction: column;
+  }
 
-.sym {
-  font-family: 'Material Symbols Outlined';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+  .row {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .grow {
+    flex: 1;
+  }
+
+  .centered {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .wrap {
+    flex-wrap: wrap;
+  }
+
+  .g-10 {
+    gap: 1rem;
+  }
+
+
+  /* documentation blocks */
+
+  xpr-code pre {
+    padding: 1em;
+  }
+
+  /* symbols */
+
+  .sym {
+    font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+  }
 }
