--- a/apps/xpd/src/styles.css
+++ b/apps/xpd/src/styles.css
@@ -1,6 +1,6 @@
 /* pico variables changes */
 :root {
-  --pico-font-family-sans-serif: "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
+  --pico-font-family-sans-serif: Figtree, "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
   --xpd-body-height: auto;
   /*--pico-font-size: 95%;*/
 
@@ -28,6 +28,10 @@ html, body {
 
   dialog > article > header .close, dialog > article > header :is(a,button)[rel=prev] {
     /* fix the position of the close button */
+    transform: translateY(5px);
+  }
+
+  button span.sym {
     transform: translateY(5px);
   }
 
