--- a/apps/xpd/src/styles.css
+++ b/apps/xpd/src/styles.css
@@ -1,6 +1,10 @@
 /* pico variables changes */
 :root {
-  --pico-font-family-sans-serif: Figtree, "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
+  --pico-font-family-sans-serif:
+    Figtree, "Noto Sans", system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(
+    --pico-font-family-emoji
+  );
   --xpd-body-height: auto;
   /*--pico-font-size: 95%;*/
 
@@ -22,11 +26,10 @@ html, body {
 }
 
 .pico {
-
-
   /* fix pico */
 
-  dialog > article > header .close, dialog > article > header :is(a,button)[rel=prev] {
+  dialog > article > header .close,
+  dialog > article > header :is(a, button)[rel="prev"] {
     /* fix the position of the close button */
     transform: translateY(5px);
   }
@@ -41,7 +44,6 @@ html, body {
     /* small button with icon */
     padding: 0;
   }
-
 
   /* space utils */
 
@@ -79,7 +81,6 @@ html, body {
     padding-bottom: 1rem;
   }
 
-
   /* flex utils */
 
   .col, .row {
@@ -112,7 +113,6 @@ html, body {
     gap: 1rem;
   }
 
-
   /* documentation blocks */
 
   xpr-code pre {
@@ -122,7 +122,7 @@ html, body {
   /* symbols */
 
   .sym {
-    font-family: 'Material Symbols Outlined';
+    font-family: "Material Symbols Outlined";
     font-weight: normal;
     font-style: normal;
     font-size: 24px;
@@ -133,7 +133,7 @@ html, body {
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
-    -webkit-font-feature-settings: 'liga';
+    -webkit-font-feature-settings: "liga";
     -webkit-font-smoothing: antialiased;
   }
 }
